tests/good/interpret/020-alloc-read.clap
val x = alloc 42
val y = read x

