tests/bad/syntax/079-misplaced-shebang.clap
val x = 42
#! /usr/bin/toto
val y = 36
